<resources>
    <string name="app_name">SemesterApplication</string>
    <string-array name="languages">
        <item>English</item>
        <item>Romanian</item>
    </string-array>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="login">Log in</string>
    <string name="signup">Sign-Up</string>
    <string name="family">Family</string>
    <string name="job" translatable="false">Job</string>
    <string name="custom" translatable="false">Custom</string>
    <string name="own">Own</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="friends">Friends</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email" translatable="false">Email</string>
    <string name="group">Group</string>

    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="logoff">Log off</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="tasksList">Tasks list</string>
    <string name="changeSettings">Change settings</string>
    <string name="createTask">Create a task</string>
    <string name="settings">Settings</string>
    <string name="emailIntent">Choose an email client:</string>
    <string name="addTask">Add a task</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="mark">Mark</string>
    <string name="writeTask">Write a task...</string>
    <string name="deleteAll">Delete all tasks</string>
    <string name="shareSchedule">Share schedule</string>


</resources>